grammar/SMELParser.py
# Generated from grammar/SMEL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SMELParser ( Parser ):

    grammarFileName = "SMEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'MIGRATION'", "'FROM'", "'TO'", "'USING'", 
                     "'AS'", "'INTO'", "'WITH'", "'WHERE'", "'IN'", "'KEY'", 
                     "'AND'", "'COUNT'", "'RELATIONAL'", "'DOCUMENT'", "'GRAPH'", 
                     "'COLUMNAR'", "'NEST'", "'UNNEST'", "'FLATTEN'", "'UNWIND'", 
                     "'DELETE'", "'ADD'", "'RENAME'", "'COPY'", "'MOVE'", 
                     "'MERGE'", "'SPLIT'", "'CAST'", "'GENERATE'", "'LINKING'", 
                     "'DROP'", "'EXTRACT'", "'RELTYPE'", "'PROPERTIES'", 
                     "'STRUCTURE'", "'REFERENCE'", "'ATTRIBUTE'", "'EMBEDDED'", 
                     "'ENTITY'", "'VARIATION'", "'PRIMARY'", "'UNIQUE'", 
                     "'FOREIGN'", "'PARTITION'", "'CLUSTERING'", "'REFERENCES'", 
                     "'COLUMNS'", "'ATTRIBUTES'", "'RELATIONSHIPS'", "'CARDINALITY'", 
                     "'ONE_TO_ONE'", "'ONE_TO_MANY'", "'ZERO_TO_ONE'", "'ZERO_TO_MANY'", 
                     "'String'", "'Text'", "'Int'", "'Integer'", "'Long'", 
                     "'Double'", "'Float'", "'Decimal'", "'Boolean'", "'Date'", 
                     "'DateTime'", "'Timestamp'", "'UUID'", "'Binary'", 
                     "'TYPE'", "'DEFAULT'", "'SERIAL'", "'NOT NULL'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':'", "','", "'.'", "'('", 
                     "')'", "'['", "']'", "'='" ]

    symbolicNames = [ "<INVALID>", "MIGRATION", "FROM", "TO", "USING", "AS", 
                      "INTO", "WITH", "WHERE", "IN", "KEY", "AND", "COUNT", 
                      "RELATIONAL", "DOCUMENT", "GRAPH", "COLUMNAR", "NEST", 
                      "UNNEST", "FLATTEN", "UNWIND", "DELETE", "ADD", "RENAME", 
                      "COPY", "MOVE", "MERGE", "SPLIT", "CAST", "GENERATE", 
                      "LINKING", "DROP", "EXTRACT", "RELTYPE", "PROPERTIES", 
                      "STRUCTURE", "REFERENCE", "ATTRIBUTE", "EMBEDDED", 
                      "ENTITY", "VARIATION", "PRIMARY", "UNIQUE", "FOREIGN", 
                      "PARTITION", "CLUSTERING", "REFERENCES", "COLUMNS", 
                      "ATTRIBUTES", "RELATIONSHIPS", "CARDINALITY", "ONE_TO_ONE", 
                      "ONE_TO_MANY", "ZERO_TO_ONE", "ZERO_TO_MANY", "STRING", 
                      "TEXT", "INT", "INTEGER", "LONG", "DOUBLE", "FLOAT", 
                      "DECIMAL", "BOOLEAN", "DATE", "DATETIME", "TIMESTAMP", 
                      "UUID", "BINARY", "TYPE", "DEFAULT", "SERIAL", "NOT_NULL", 
                      "TRUE", "FALSE", "NULL", "COLON", "COMMA", "DOT", 
                      "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "EQUALS", 
                      "VERSION_NUMBER", "INTEGER_LITERAL", "DECIMAL_LITERAL", 
                      "STRING_LITERAL", "IDENTIFIER", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_migration = 0
    RULE_header = 1
    RULE_migrationDecl = 2
    RULE_fromToDecl = 3
    RULE_usingDecl = 4
    RULE_databaseType = 5
    RULE_version = 6
    RULE_operation = 7
    RULE_nest = 8
    RULE_nestClause = 9
    RULE_unnest = 10
    RULE_unnestClause = 11
    RULE_flatten = 12
    RULE_flattenClause = 13
    RULE_unwind = 14
    RULE_unwindClause = 15
    RULE_withCardinalityClause = 16
    RULE_usingKeyClause = 17
    RULE_whereClause = 18
    RULE_renameClause = 19
    RULE_addReferenceClause = 20
    RULE_generateKeyClause = 21
    RULE_linkingClause = 22
    RULE_copy = 23
    RULE_move = 24
    RULE_merge = 25
    RULE_split = 26
    RULE_cast = 27
    RULE_linking = 28
    RULE_add = 29
    RULE_attributeAdd = 30
    RULE_attributeClause = 31
    RULE_withTypeClause = 32
    RULE_withDefaultClause = 33
    RULE_notNullClause = 34
    RULE_referenceAdd = 35
    RULE_referenceClause = 36
    RULE_embeddedAdd = 37
    RULE_embeddedClause = 38
    RULE_withStructureClause = 39
    RULE_entityAdd = 40
    RULE_entityClause = 41
    RULE_withKeyClause = 42
    RULE_keyAdd = 43
    RULE_variationAdd = 44
    RULE_relTypeAdd = 45
    RULE_delete = 46
    RULE_attributeDelete = 47
    RULE_referenceDelete = 48
    RULE_embeddedDelete = 49
    RULE_entityDelete = 50
    RULE_drop = 51
    RULE_keyDrop = 52
    RULE_variationDrop = 53
    RULE_relTypeDrop = 54
    RULE_rename = 55
    RULE_featureRename = 56
    RULE_entityRename = 57
    RULE_relTypeRename = 58
    RULE_keyType = 59
    RULE_keyClause = 60
    RULE_referencesClause = 61
    RULE_withColumnsClause = 62
    RULE_identifierList = 63
    RULE_variationClause = 64
    RULE_withAttributesClause = 65
    RULE_withRelationshipsClause = 66
    RULE_withCountClause = 67
    RULE_relTypeClause = 68
    RULE_withPropertiesClause = 69
    RULE_extract = 70
    RULE_extractClause = 71
    RULE_cardinalityType = 72
    RULE_dataType = 73
    RULE_qualifiedName = 74
    RULE_pathSegment = 75
    RULE_identifier = 76
    RULE_condition = 77
    RULE_literal = 78

    ruleNames =  [ "migration", "header", "migrationDecl", "fromToDecl", 
                   "usingDecl", "databaseType", "version", "operation", 
                   "nest", "nestClause", "unnest", "unnestClause", "flatten", 
                   "flattenClause", "unwind", "unwindClause", "withCardinalityClause", 
                   "usingKeyClause", "whereClause", "renameClause", "addReferenceClause", 
                   "generateKeyClause", "linkingClause", "copy", "move", 
                   "merge", "split", "cast", "linking", "add", "attributeAdd", 
                   "attributeClause", "withTypeClause", "withDefaultClause", 
                   "notNullClause", "referenceAdd", "referenceClause", "embeddedAdd", 
                   "embeddedClause", "withStructureClause", "entityAdd", 
                   "entityClause", "withKeyClause", "keyAdd", "variationAdd", 
                   "relTypeAdd", "delete", "attributeDelete", "referenceDelete", 
                   "embeddedDelete", "entityDelete", "drop", "keyDrop", 
                   "variationDrop", "relTypeDrop", "rename", "featureRename", 
                   "entityRename", "relTypeRename", "keyType", "keyClause", 
                   "referencesClause", "withColumnsClause", "identifierList", 
                   "variationClause", "withAttributesClause", "withRelationshipsClause", 
                   "withCountClause", "relTypeClause", "withPropertiesClause", 
                   "extract", "extractClause", "cardinalityType", "dataType", 
                   "qualifiedName", "pathSegment", "identifier", "condition", 
                   "literal" ]

    EOF = Token.EOF
    MIGRATION=1
    FROM=2
    TO=3
    USING=4
    AS=5
    INTO=6
    WITH=7
    WHERE=8
    IN=9
    KEY=10
    AND=11
    COUNT=12
    RELATIONAL=13
    DOCUMENT=14
    GRAPH=15
    COLUMNAR=16
    NEST=17
    UNNEST=18
    FLATTEN=19
    UNWIND=20
    DELETE=21
    ADD=22
    RENAME=23
    COPY=24
    MOVE=25
    MERGE=26
    SPLIT=27
    CAST=28
    GENERATE=29
    LINKING=30
    DROP=31
    EXTRACT=32
    RELTYPE=33
    PROPERTIES=34
    STRUCTURE=35
    REFERENCE=36
    ATTRIBUTE=37
    EMBEDDED=38
    ENTITY=39
    VARIATION=40
    PRIMARY=41
    UNIQUE=42
    FOREIGN=43
    PARTITION=44
    CLUSTERING=45
    REFERENCES=46
    COLUMNS=47
    ATTRIBUTES=48
    RELATIONSHIPS=49
    CARDINALITY=50
    ONE_TO_ONE=51
    ONE_TO_MANY=52
    ZERO_TO_ONE=53
    ZERO_TO_MANY=54
    STRING=55
    TEXT=56
    INT=57
    INTEGER=58
    LONG=59
    DOUBLE=60
    FLOAT=61
    DECIMAL=62
    BOOLEAN=63
    DATE=64
    DATETIME=65
    TIMESTAMP=66
    UUID=67
    BINARY=68
    TYPE=69
    DEFAULT=70
    SERIAL=71
    NOT_NULL=72
    TRUE=73
    FALSE=74
    NULL=75
    COLON=76
    COMMA=77
    DOT=78
    LPAREN=79
    RPAREN=80
    LBRACKET=81
    RBRACKET=82
    EQUALS=83
    VERSION_NUMBER=84
    INTEGER_LITERAL=85
    DECIMAL_LITERAL=86
    STRING_LITERAL=87
    IDENTIFIER=88
    LINE_COMMENT=89
    BLOCK_COMMENT=90
    WS=91

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MigrationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(SMELParser.HeaderContext,0)


        def EOF(self):
            return self.getToken(SMELParser.EOF, 0)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMELParser.OperationContext)
            else:
                return self.getTypedRuleContext(SMELParser.OperationContext,i)


        def getRuleIndex(self):
            return SMELParser.RULE_migration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMigration" ):
                listener.enterMigration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMigration" ):
                listener.exitMigration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMigration" ):
                return visitor.visitMigration(self)
            else:
                return visitor.visitChildren(self)




    def migration(self):

        localctx = SMELParser.MigrationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_migration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.header()
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8052932608) != 0):
                self.state = 159
                self.operation()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 165
            self.match(SMELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def migrationDecl(self):
            return self.getTypedRuleContext(SMELParser.MigrationDeclContext,0)


        def fromToDecl(self):
            return self.getTypedRuleContext(SMELParser.FromToDeclContext,0)


        def usingDecl(self):
            return self.getTypedRuleContext(SMELParser.UsingDeclContext,0)


        def getRuleIndex(self):
            return SMELParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader" ):
                return visitor.visitHeader(self)
            else:
                return visitor.visitChildren(self)




    def header(self):

        localctx = SMELParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.migrationDecl()
            self.state = 168
            self.fromToDecl()
            self.state = 169
            self.usingDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MigrationDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MIGRATION(self):
            return self.getToken(SMELParser.MIGRATION, 0)

        def identifier(self):
            return self.getTypedRuleContext(SMELParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(SMELParser.COLON, 0)

        def version(self):
            return self.getTypedRuleContext(SMELParser.VersionContext,0)


        def getRuleIndex(self):
            return SMELParser.RULE_migrationDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMigrationDecl" ):
                listener.enterMigrationDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMigrationDecl" ):
                listener.exitMigrationDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMigrationDecl" ):
                return visitor.visitMigrationDecl(self)
            else:
                return visitor.visitChildren(self)




    def migrationDecl(self):

        localctx = SMELParser.MigrationDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_migrationDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(SMELParser.MIGRATION)
            self.state = 172
            self.identifier()
            self.state = 173
            self.match(SMELParser.COLON)
            self.state = 174
            self.version()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FromToDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(SMELParser.FROM, 0)

        def databaseType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMELParser.DatabaseTypeContext)
            else:
                return self.getTypedRuleContext(SMELParser.DatabaseTypeContext,i)


        def TO(self):
            return self.getToken(SMELParser.TO, 0)

        def getRuleIndex(self):
            return SMELParser.RULE_fromToDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFromToDecl" ):
                listener.enterFromToDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFromToDecl" ):
                listener.exitFromToDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFromToDecl" ):
                return visitor.visitFromToDecl(self)
            else:
                return visitor.visitChildren(self)




    def fromToDecl(self):

        localctx = SMELParser.FromToDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fromToDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(SMELParser.FROM)
            self.state = 177
            self.databaseType()
            self.state = 178
            self.match(SMELParser.TO)
            self.state = 179
            self.databaseType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsingDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USING(self):
            return self.getToken(SMELParser.USING, 0)

        def identifier(self):
            return self.getTypedRuleContext(SMELParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(SMELParser.COLON, 0)

        def version(self):
            return self.getTypedRuleContext(SMELParser.VersionContext,0)


        def getRuleIndex(self):
            return SMELParser.RULE_usingDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsingDecl" ):
                listener.enterUsingDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsingDecl" ):
                listener.exitUsingDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsingDecl" ):
                return visitor.visitUsingDecl(self)
            else:
                return visitor.visitChildren(self)




    def usingDecl(self):

        localctx = SMELParser.UsingDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_usingDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(SMELParser.USING)
            self.state = 182
            self.identifier()
            self.state = 183
            self.match(SMELParser.COLON)
            self.state = 184
            self.version()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatabaseTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RELATIONAL(self):
            return self.getToken(SMELParser.RELATIONAL, 0)

        def DOCUMENT(self):
            return self.getToken(SMELParser.DOCUMENT, 0)

        def GRAPH(self):
            return self.getToken(SMELParser.GRAPH, 0)

        def COLUMNAR(self):
            return self.getToken(SMELParser.COLUMNAR, 0)

        def getRuleIndex(self):
            return SMELParser.RULE_databaseType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatabaseType" ):
                listener.enterDatabaseType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatabaseType" ):
                listener.exitDatabaseType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDatabaseType" ):
                return visitor.visitDatabaseType(self)
            else:
                return visitor.visitChildren(self)




    def databaseType(self):

        localctx = SMELParser.DatabaseTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_databaseType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 122880) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION_NUMBER(self):
            return self.getToken(SMELParser.VERSION_NUMBER, 0)

        def INTEGER_LITERAL(self):
            return self.getToken(SMELParser.INTEGER_LITERAL, 0)

        def getRuleIndex(self):
            return SMELParser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersion" ):
                return visitor.visitVersion(self)
            else:
                return visitor.visitChildren(self)




    def version(self):
